# VOT_tracker_C_MODEL

./: .gitignore  CMakeLists.txt  README.md  cls_score_output.txt  conv3_oa.txt  conv4_oa.txt  conv5_oa.txt  conv6_oa.txt  ctr_score_output.txt  dram_result.txt  gt_bbox_conv1_output.txt  gt_bbox_conv2_output.txt  gt_bbox_conv3_output.txt  gt_c_xcorr_output.txt  gt_c_z_k_output.txt  gt_cls_conv1_output.txt  gt_cls_conv2_output.txt  gt_cls_conv3_output.txt  gt_cls_score_output.txt  gt_ctr_score_output.txt  gt_imgx_conv4_output.txt  gt_imgx_conv5_output.txt  gt_imgx_pool2_output.txt  gt_imgz_conv3_output.txt  gt_imgz_conv4_output.txt  gt_imgz_conv5_output.txt  gt_imgz_conv6_output.txt  gt_imgz_pool1_output.txt  gt_imgz_pool2_output.txt  gt_offset_output.txt  gt_r_xcorr_output.txt  gt_r_z_k_output.txt  gt_weight_c_z_k.txt  gt_weight_r_z_k.txt  makefile  maxpool1_oa.txt  maxpool2_oa.txt  offset_output.txt
inc/: CmakeLists.txt  address_config.hh  address_config_v1.h  compressor.h  controller.h  max_pool.h  memory.h  memory_controller.h  reducer.h  specs.h  state.h  tool.h
inc/AIM/: CMakeLists.txt  associative_index_matching_unit.h  comparator_array.h  priority_encoder.h  priority_encoder_set.h
inc/PE/: CmakeLists.txt  address_generator.h  pe.h  sequence_decoder.h
src/: addr_gen.cppp  addr_gen_v1.cpp  compressor.cpp  controller.cpp  fifo.cpp  main.cpp  max_pool.cpp  memory.cpp  memory_controller.cppp  memory_controller_v1.cpp  reducer.cpp  tool.cpp
src/AIM/: associative_index_matching_unit.cpp  comparator_array.cpp  priority_encoder.cpp  priority_encoder_set.cpp
src/PE/: address_generator.cpp  pe.cpp  sequence_decoder.cpp
test/: CMakeLists.txt  c_x.txt  c_z_k.txt  cls_conv1_input.txt  cls_conv2_input.txt  cls_conv3_input.txt  cls_score_input.txt  example.cpp  imgx_conv1_input.txt  imgx_conv6_output.txt  imgz_conv1_input.txt  imgz_conv6_output.txt  offset_input.txt  test_compressor.cpp  test_maxpool.cpp  test_memory.cpp  test_reducer.cpp  utils.h
test/aim/: associative_index_matching_unit_test.cpp  comparator_array_test.cpp  priority_encoder_test.cpp
test/pe/: processing_element_test.cpp  test_pe.cpp
